--- a/bot/.env
+++ b/bot/.env
@@ -1,6 +1,7 @@
 # .env — variáveis de ambiente para o bot
 CONFIRMED_GROUP_ID=120363401010152969@g.us #numero do grupo de confirmados
 DUVIDAS_GROUP_ID=120363403656355539@g.us #numero do grupo de duvidas
+API_BASE_URL=apitccsite-production-7d4b.up.railway.app
 
 # opcional
 NODE_ENV=development
