--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     }
   },
   "dependencies": {
-    "electron": "^31.0.0",
+    "dotenv": "^17.2.3",
+    "electron": "^39.2.3",
     "electron-log": "^5.0.0",
     "qrcode": "^1.5.3"
   },
